--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <title>Claudia Arias Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css">
     <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="my-name">Claudia Arias</h1>
+        <h2 class="subheading">Web Developer & Designer</h2>
+
+
+        <a href="./pages/about.html" class="enter">
+            Enter
+        </a>
+    </div>
 </body>
 </html>
