--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1 class="my-name">Claudia Arias</h1>
-        <h2 class="subheading">Web Developer & Designer</h2>
+        <h2 class="subheading">Web Developer</h2>
 
 
         <a href="./pages/about.html" class="enter">
