almost finished - present

--- a/pages/about.html
+++ b/pages/about.html
@@ -27,7 +27,7 @@
                     <a href="https://www.linkedin.com/in/claudiaarias08/" target="_blank"><i class="fab fa-linkedin-in"></i></i></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/in/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/people/Claudia-Arias/100028785553788" target="_blank"><i class="fab fa-facebook-square"></i></a>
                 </li>
                 <li>
                     <a href="mailto:ca9488@gmail.com" target="_top"><i class="far fa-envelope"></i></a>
@@ -36,12 +36,12 @@
         </header>
 
         <main>
-            <img src="https://images.pexels.com/photos/406014/pexels-photo-406014.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" width="150" height="150" class="profile-img"/>
+            <img src="../images/ClaudiaSelfie.png" width="150" height="150" class="profile-img"/>
             <div class="info">
                 <h1 class="name-about">Claudia Arias</h1>
                 <h2 class="sub-about">Web Developer</h2>
                 <br>
-                <p class="about-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <p class="about-desc">I dedicate myself to bridging the gap between code and art. Because of my background in art and technology, I want to be a part of those that make them a reality. I believe that technology is taking us to great places we could only imagine before and I am excited to be a part of that journey.</p>
             </div>
             <br>
             <div class="skills">
