--- a/pages/projects.html
+++ b/pages/projects.html
@@ -37,35 +37,35 @@
         <h1 class="pro-title"> Projects </h1>
         <main class="projects">
             <div class="pro-one">
-                <div class="project">
+                <div class="project spot">
                     <div class="pro-info">
-                        <h3>jsjhdncjdjcfbvbfh</h3>
-                        <p>atdgsyhkojlkhgfd sgdhfjgkhlj,mnthbrdgsyuhjikfnhd</p>
-                        <button type="button">Click me</button>
+                        <h3>Spot the Differences</h3>
+                        <p>A game I created using HTML, CSS and Vanilla Javascript. The player must spot the differences between two images that look almost the same. To win, They have to get all of the differences before the time runs out. </p>
+                        <button type="button"><a href="https://nifty-nightingale-5931b8.netlify.com/" target="_blank">Play</a></button>
                     </div>
                 </div>
-                <div class="project">
+                <div class="project pixle">
                     <div class="pro-info">
-                        <h3>jsjhdncjdjcfbvbfh</h3>
-                        <p>atdgsyhkojlkhgfd sgdhfjgkhlj,mnthbrdgsyuhjikfnhd</p>
-                        <button type="button">Click me</button>
+                        <h3>Pixle</h3>
+                        <p>Pinterest/Behance inspired project that is designed to inspire the user let them choose their interest based on fields such as photography, drawing, design, typography and updates their feed based on their choice. I used the Behance API to grab the field.</p>
+                        <button type="button"><a href="http://immense-smell.surge.sh/" target="_blank">View</a></button>
                     </div>
                 </div>
             </div>
 
             <div class="pro-two">
-                <div class="project">
+                <div class="project han">
                     <div class="pro-info">
-                        <h3>jsjhdncjdjcfbvbfh</h3>
-                        <p>atdgsyhkojlkhgfd sgdhfjgkhlj,mnthbrdgsyuhjikfnhd</p>
-                        <button type="button">Click me</button>
+                        <h3>Her Name is Han</h3>
+                        <p>This is a collaboration with UX designers to re-create a restaurant's website. We used React and and styled the page using CSS.</p>
+                        <button type="button"><a href="https://unruffled-almeida-39963d.netlify.com/" target="_blank">Visit</a></button>
                     </div>
                 </div>
-                <div class="project">
+                <div class="project socialite">
                     <div class="pro-info">
-                        <h3>jsjhdncjdjcfbvbfh</h3>
-                        <p>atdgsyhkojlkhgfd sgdhfjgkhlj,mnthbrdgsyuhjikfnhd</p>
-                        <button type="button">Click me</button>
+                        <h3>SOCialite</h3>
+                        <p>Socialite is a project I developed with two other developers that included full crud functionality. We used React, Express and Sequelize. To enter, use 'claudia' as username and 'c' for password.</p>
+                        <button type="button"><a href="https://dream-team-socialite.herokuapp.com/" target="_blank">Visit</a></button>
                     </div>      
                 </div>
             </div>
